# rediscli

./: .gitignore  README.md  pyproject.toml
src/rediscli/: main.py
